# HDFS-classification-with-Reinforcement-Learning-RLVR-

./: 1-data_prep.ipynb  2-model_training.ipynb  3-model_evaluation.ipynb  CLAUDE.md  README.md  data_readme.md  functions.py  pyproject.toml
data/: eval_results.csv  train_rft.jsonl  val_rft.jsonl
